crates/extractors/tests/snapshots/fixture_set_snapshot__fixture_02_openai_markdown_links_mentions.snap
---
source: crates/extractors/tests/fixture_set_snapshot.rs
expression: "extract_mentions(&body, &canonical_config())"
---
- entity: Pinecone
  char_offset: 55
  rank: 1
  matched_text: Pinecone
  is_brand: true
- entity: Qdrant
  char_offset: 145
  rank: 2
  matched_text: Qdrant
  is_brand: false
- entity: Weaviate
  char_offset: 225
  rank: 3
  matched_text: Weaviate
  is_brand: false
- entity: Chroma
  char_offset: 306
  rank: 4
  matched_text: Chroma
  is_brand: false
