crates/extractors/tests/snapshots/fixture_set_snapshot__fixture_03_openai_bare_domains_mentions.snap
---
source: crates/extractors/tests/fixture_set_snapshot.rs
assertion_line: 70
expression: "extract_mentions(&body, &canonical_config())"
---
- entity: Qdrant
  char_offset: 44
  rank: 1
  matched_text: qdrant
  is_brand: false
  sentiment:
    label: neutral
    score: 50
    lane: deterministic_lexicon
- entity: Weaviate
  char_offset: 60
  rank: 2
  matched_text: weaviate
  is_brand: false
  sentiment:
    label: neutral
    score: 50
    lane: deterministic_lexicon
- entity: Pinecone
  char_offset: 113
  rank: 3
  matched_text: Pinecone
  is_brand: true
  sentiment:
    label: neutral
    score: 50
    lane: deterministic_lexicon
- entity: Chroma
  char_offset: 214
  rank: 4
  matched_text: chroma
  is_brand: false
  sentiment:
    label: neutral
    score: 50
    lane: deterministic_lexicon
